# convoy

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.json  docker-compose.yml  platformio.ini
.github/workflows/: device-build.yml  docker-publish.yml
agent/src/: main.cpp
backend/: Dockerfile  convoy.db  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  utils.py
backend/main/: dependencies.py  exceptions.py  main.py  models.py  router.py  service.py  utils.py
backend/src/: dependencies.py  main.py  models.py  router.py  service.py  test_main.py
backend/tests/: api.py  app.py  schemas.py  service.py  test_main.py  todoist.py  utils.py
base-station/: platformio.ini
devices/: platformio.ini
devices/can-reader/: platformio.ini
devices/can-reader/include/: constants.h
devices/can-reader/scripts/: rename_binary.py  test_server.py
devices/can-reader/src/: main-esp.cpp  main-rp2040.cpp
devices/esp/: convoy.yaml
devices/esp/.esphome/storage/: convoy.yaml.json
devices/esp/components/canreader/: sensor.py
devices/include/: config.h  constants.h  data.h
devices/src/: main-agent.cpp  main-base-station.cpp
ui/: Dockerfile  angular.json  nginx.conf  openapi-ts.config.ts  package.json  pnpm-lock.yaml
ui/src/: index.html  proxy.conf.json
ui/src/app/: app-routing.module.ts  app.module.ts
ui/src/app/models/: modifiable-supply.model.spec.ts  modifiable-supply.model.ts  selected-supply.model.spec.ts  selected-supply.model.ts
ui/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
(+42 files in other folders)
